[gd_scene load_steps=3 format=3 uid="uid://c7i87uu6gjuk7"]

[ext_resource type="Script" path="res://Scenes/Character Planner Menu/input_lv_container_single_line.gd" id="1_cs0l6"]
[ext_resource type="PackedScene" uid="uid://bvfxhovxygquo" path="res://Scenes/Character Planner Menu/InputLv.tscn" id="2_wxdjk"]

[node name="InputLv Container SingleLine" type="HBoxContainer"]
offset_right = 174.0
offset_bottom = 31.0
script = ExtResource("1_cs0l6")

[node name="InputLv" parent="." instance=ExtResource("2_wxdjk")]
layout_mode = 2
caret_column = 1
max_lv = 10

[node name="InputLv Add" type="Button" parent="."]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+1"
metadata/_edit_lock_ = true

[node name="InputLv Sub" type="Button" parent="."]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "-1"
metadata/_edit_lock_ = true

[node name="InputLv Max" type="Button" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Max"
metadata/_edit_lock_ = true

[connection signal="pressed" from="InputLv Add" to="." method="add_pressed"]
[connection signal="pressed" from="InputLv Sub" to="." method="sub_pressed"]
[connection signal="pressed" from="InputLv Max" to="." method="max_pressed"]
